src/github.com/ebay/beam/query/parser/testdata/ask/errors/ask_var.res
Query:
ASK ?rims
WHERE {
	?rims <color> "white"
}

Parsed:
Error: unable to parse query: line 1 column 5: expected WHERE
